--- a/fading_moon.html
+++ b/fading_moon.html
@@ -14,6 +14,7 @@
     );
     animation-name: fade;
     animation-duration: 3s;
+    animation-iteration-count: infinite;
   }
 
   @keyframes fade {
